--- a/docker/docker-compose-base.yml
+++ b/docker/docker-compose-base.yml
@@ -3,7 +3,7 @@ services:
     container_name: ragflow-es-01
     profiles:
       - elasticsearch
-    image: elasticsearch:${STACK_VERSION}
+    image: registry.cn-hangzhou.aliyuncs.com/olymtech/elasticsearch:${STACK_VERSION}
     volumes:
       - esdata01:/usr/share/elasticsearch/data
     ports:
@@ -39,7 +39,7 @@ services:
     container_name: ragflow-infinity
     profiles:
       - infinity
-    image: infiniflow/infinity:v0.6.0-dev3
+    image: registry.cn-hangzhou.aliyuncs.com/olymtech/infinity:v0.6.0-dev3
     volumes:
       - infinity_data:/var/infinity
       - ./infinity_conf.toml:/infinity_conf.toml
@@ -68,7 +68,7 @@ services:
 
   mysql:
     # mysql:5.7 linux/arm64 image is unavailable.
-    image: mysql:8.0.39
+    image: registry.cn-hangzhou.aliyuncs.com/olymtech/mysql:8.0.39
     container_name: ragflow-mysql
     env_file: .env
     environment:
@@ -96,7 +96,7 @@ services:
     restart: on-failure
 
   minio:
-    image: quay.io/minio/minio:RELEASE.2023-12-20T01-00-02Z
+    image: registry.cn-hangzhou.aliyuncs.com/olymtech/minio:RELEASE.2023-12-20T01-00-02Z
     container_name: ragflow-minio
     command: server --console-address ":9001" /data
     ports:
@@ -115,7 +115,7 @@ services:
 
   redis:
     # swr.cn-north-4.myhuaweicloud.com/ddn-k8s/docker.io/valkey/valkey:8
-    image: valkey/valkey:8
+    image: registry.cn-hangzhou.aliyuncs.com/olymtech/valkey:8
     container_name: ragflow-redis
     command: redis-server --requirepass ${REDIS_PASSWORD} --maxmemory 128mb --maxmemory-policy allkeys-lru
     env_file: .env
